# pyspssio

./: .gitattributes  .gitignore  .readthedocs.yaml  LICENSE  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-publish-test.yml  python-publish.yml  test_build.yml
docs/: requirements.txt
docs/source/: classes.rst  conf.py  constants.rst  exceptions.rst  functions.rst  index.rst  readme.rst
pyspssio/: __init__.py  _version.py  command_line.py  config.py  constants.py  constants_map.py  errors.py  header.py  reader.py  spssfile.py  user_functions.py  writer.py
pyspssio/spssio/include/: spssdio.h  spssdiocodes.h
pyspssio/spssio/license/: LA_cs  LA_de  LA_el  LA_en  LA_es  LA_fr  LA_in  LA_it  LA_ja  LA_ko  LA_lt  LA_pl  LA_pt  LA_ru  LA_sl  LA_tr  LA_zh  LA_zh_TW  REDIST  notices
pyspssio/spssio/lin64/: libicui18n.so.61  libicuuc.so.61.2  libspssdio.so.1  libspssjdio.so.1
pyspssio/spssio/lin64/gskit/N/icc/icclib/: ICCSIG.txt
pyspssio/spssio/macos/: libgsk8iccs.dylib  libicui18n.61.2.dylib  libicuuc.61.2.dylib  libspssdio.dylib  libspssjdio.dylib  libzlib1211spss1.dylib  libzlib1213spss.dylib
pyspssio/spssio/macos/gskit/N/icc/icclib/: ICCSIG.txt
pyspssio/spssio/plinux64/: libicuuc.so.61.2  libspssdio.so.1  libspssjdio.so.1
pyspssio/spssio/plinux64/gskit/C/icc/icclib/: ICCSIG.txt
pyspssio/spssio/plinux64/gskit/N/icc/icclib/: ICCSIG.txt
pyspssio/spssio/win64/: spssdio.vb  spssio64.lib
pyspssio/spssio/win64/C/icc/icclib/: ICCSIG.txt
pyspssio/spssio/win64/N/icc/icclib/: ICCSIG.txt
pyspssio/spssio/zlinux64/: libicui18n.so.61  libicuuc.so.61.2  libspssdio.so.1  libspssjdio.so.1
pyspssio/spssio/zlinux64/gskit/C/icc/icclib/: ICCSIG.txt
pyspssio/spssio/zlinux64/gskit/N/icc/icclib/: ICCSIG.txt
