[metadata]
name = pyspssio
version = file: VERSION
description = Read and write SPSS (.sav and .zsav) files to/from pandas dataframes
long_description = file: README.md
long_description_content_type = text/markdown
author = Steven Spector
author_email = stspec.dev@gmail.com
url = https://github.com/stspec/pyspssio
license = MIT
license_files =
    LICENSE.txt

[options]
packages = pyspssio
include_package_data = True
python_requires = >=3.6
install_requires =
    pandas
    psutil
