[metadata]
name = pyspssio
description = Read and write SPSS (.sav and .zsav) files to/from pandas dataframes
long_description = file: README.md
long_description_content_type = text/markdown
author = Steven Spector
author_email = stspec.dev@gmail.com
url = https://github.com/stspec/pyspssio
project_urls =
    Documentation = https://pyspssio.readthedocs.io
license = MIT
license_files =
    LICENSE.txt

[versioneer]
VCS = git
style = pep440
versionfile_source = pyspssio/_version.py
versionfile_build = pyspssio/_version.py
tag_prefix = v
parentdir_prefix = pyspssio-

[options]
packages = pyspssio
include_package_data = True
python_requires = >=3.6
install_requires =
    pandas
    psutil

[options.package_data]
pyspssio =
    spssio/document/*
    spssio/include/*
    spssio/license/*
    spssio/win64/*.*
    spssio/macos/*.*
    spssio/lin64/*.*
